--- a/libre2-cassandra-5.0/pom.xml
+++ b/libre2-cassandra-5.0/pom.xml
@@ -7,14 +7,17 @@
     <parent>
         <groupId>com.axonops</groupId>
         <artifactId>libre2-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.9.1</version>
     </parent>
 
-    <artifactId>libre2-cassandra</artifactId>
+    <artifactId>libre2-cassandra-5.0</artifactId>
     <packaging>jar</packaging>
 
-    <name>libre2-cassandra</name>
-    <description>Cassandra integration convenience layer with automatic JMX</description>
+    <name>libre2-cassandra-5.0</name>
+    <description>Cassandra 5.0 integration convenience layer with automatic JMX</description>
+
+    <!-- Version inherited from parent: 0.9.1 -->
+    <!-- Cassandra version: 5.0.x -->
 
     <dependencies>
         <!-- Core library -->
