--- a/libre2-core/pom.xml
+++ b/libre2-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.axonops</groupId>
         <artifactId>libre2-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.9.1</version>
     </parent>
 
     <artifactId>libre2-core</artifactId>
@@ -15,6 +15,8 @@
 
     <name>libre2-core</name>
     <description>Core RE2 regex library - generic, framework-agnostic</description>
+
+    <!-- Version inherited from parent: 0.9.1 -->
 
     <dependencies>
         <!-- SLF4J API for logging - users must provide -->
