Rename module to libre2-dropwizard (generic, not Cassandra-specific)
Module rename:
- libre2-cassandra-5.0 → libre2-dropwizard
- Now generic Dropwizard Metrics integration
- Works with any framework (Cassandra, Spring Boot, standalone)

Created RE2MetricsConfig:
- Generic factory methods for Dropwizard integration
- Configurable metric prefix (e.g., 'org.apache.cassandra.metrics.RE2')
- Automatic JMX registration (optional)
- forCassandra() convenience method with standard prefix

Benefits:
- Not tied to any specific Cassandra version
- Usable by any Dropwizard application
- Metric prefix fully configurable
- Still provides Cassandra convenience (forCassandra method)

Artifacts:
- libre2-core-0.9.1.jar (3.2 MB)
- libre2-dropwizard-0.9.1.jar (3.7 KB with RE2MetricsConfig)

--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -15,10 +15,10 @@ on:
       - development
     paths:
       - 'libre2-core/src/**'
-      - 'libre2-cassandra-5.0/src/**'
+      - 'libre2-dropwizard/src/**'
       - 'pom.xml'
       - 'libre2-core/pom.xml'
-      - 'libre2-cassandra-5.0/pom.xml'
+      - 'libre2-dropwizard/pom.xml'
       - '.github/workflows/test-platforms.yml'
 
   # Manual trigger
@@ -30,10 +30,10 @@ on:
       - development
     paths:
       - 'libre2-core/src/**'
-      - 'libre2-cassandra-5.0/src/**'
+      - 'libre2-dropwizard/src/**'
       - 'pom.xml'
       - 'libre2-core/pom.xml'
-      - 'libre2-cassandra-5.0/pom.xml'
+      - 'libre2-dropwizard/pom.xml'
 
 jobs:
   # ============================================================================
@@ -65,7 +65,7 @@ jobs:
 
           echo ""
           echo "Cassandra JAR size:"
-          ls -lh libre2-cassandra-5.0/target/libre2-cassandra-5.0-*.jar || echo "(empty skeleton - OK)"
+          ls -lh libre2-dropwizard/target/libre2-dropwizard-*.jar || echo "(empty skeleton - OK)"
 
           echo ""
           echo "Native libraries in core JAR:"
