--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -306,10 +306,10 @@ jobs:
           echo "Exported JNI functions:"
           docker run --rm --platform linux/arm64 -v "$(pwd):/output" re2-builder-arm64 nm -D /output/libre2.so | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI'
 
-          # Verify all 26 JNI functions exist (20 original + 6 zero-copy direct methods)
+          # Verify all 29 JNI functions exist (20 original + 6 zero-copy match + 3 zero-copy replace)
           FUNC_COUNT=$(docker run --rm --platform linux/arm64 -v "$(pwd):/output" re2-builder-arm64 nm -D /output/libre2.so | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI' | wc -l)
-          if [ "$FUNC_COUNT" -ne 26 ]; then
-            echo "ERROR: Expected 26 exported JNI functions, found $FUNC_COUNT"
+          if [ "$FUNC_COUNT" -ne 29 ]; then
+            echo "ERROR: Expected 29 exported JNI functions, found $FUNC_COUNT"
             exit 1
           fi
 
