--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -81,9 +81,9 @@ jobs:
           echo "Exported JNI functions:"
           nm -g libre2.dylib | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI'
 
-          # Verify all 29 JNI functions exist (20 original + 6 zero-copy match + 3 zero-copy replace)
+          # Verify all 39 JNI functions exist (29 existing + 10 optimized byte[] variants)
           FUNC_COUNT=$(nm -g libre2.dylib | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI' | wc -l)
-          if [ "$FUNC_COUNT" -ne 29 ]; then
+          if [ "$FUNC_COUNT" -ne 39 ]; then
             echo "ERROR: Expected 29 exported JNI functions, found $FUNC_COUNT"
             exit 1
           fi
@@ -148,9 +148,9 @@ jobs:
           echo "Exported JNI functions:"
           nm -g libre2.dylib | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI'
 
-          # Verify all 29 JNI functions exist (20 original + 6 zero-copy match + 3 zero-copy replace)
+          # Verify all 39 JNI functions exist (29 existing + 10 optimized byte[] variants)
           FUNC_COUNT=$(nm -g libre2.dylib | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI' | wc -l)
-          if [ "$FUNC_COUNT" -ne 29 ]; then
+          if [ "$FUNC_COUNT" -ne 39 ]; then
             echo "ERROR: Expected 29 exported JNI functions, found $FUNC_COUNT"
             exit 1
           fi
@@ -226,9 +226,9 @@ jobs:
           echo "Exported JNI functions:"
           docker run --rm -v "$(pwd):/output" re2-builder nm -D /output/libre2.so | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI'
 
-          # Verify all 29 JNI functions exist (20 original + 6 zero-copy match + 3 zero-copy replace)
+          # Verify all 39 JNI functions exist (29 existing + 10 optimized byte[] variants)
           FUNC_COUNT=$(docker run --rm -v "$(pwd):/output" re2-builder nm -D /output/libre2.so | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI' | wc -l)
-          if [ "$FUNC_COUNT" -ne 29 ]; then
+          if [ "$FUNC_COUNT" -ne 39 ]; then
             echo "ERROR: Expected 29 exported JNI functions, found $FUNC_COUNT"
             exit 1
           fi
@@ -306,9 +306,9 @@ jobs:
           echo "Exported JNI functions:"
           docker run --rm --platform linux/arm64 -v "$(pwd):/output" re2-builder-arm64 nm -D /output/libre2.so | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI'
 
-          # Verify all 29 JNI functions exist (20 original + 6 zero-copy match + 3 zero-copy replace)
+          # Verify all 39 JNI functions exist (29 existing + 10 optimized byte[] variants)
           FUNC_COUNT=$(docker run --rm --platform linux/arm64 -v "$(pwd):/output" re2-builder-arm64 nm -D /output/libre2.so | grep ' T ' | grep 'Java_com_axonops_libre2_jni_RE2NativeJNI' | wc -l)
-          if [ "$FUNC_COUNT" -ne 29 ]; then
+          if [ "$FUNC_COUNT" -ne 39 ]; then
             echo "ERROR: Expected 29 exported JNI functions, found $FUNC_COUNT"
             exit 1
           fi
@@ -417,7 +417,7 @@ jobs:
           - Abseil: 20250814.1
 
           ### Verification
-          All libraries export 29 JNI functions and are self-contained with only system dependencies.
+          All libraries export 39 JNI functions and are self-contained with only system dependencies.
 
           ### Next Steps
           1. Review library sizes and dependencies
