Step 2: Create perf-test module and separate performance/stress tests
Changes:
- Create new perf-test Maven module
- Move 2 performance tests to perf-test/performance package
  - BulkMatchingPerformanceTest
  - CachePerformanceTest
- Move 4 stress tests to perf-test/stress package
  - StressTest
  - ConcurrencyTest
  - ConcurrentCleanupTest
  - EvictionWhileInUseTest
- Configure libre2-core to build test-jar for sharing test utilities
- Add test-jar dependency in perf-test for TestUtils access
- Update package declarations and add necessary imports

Result: All 459 tests passing (431 in libre2-core, 28 in perf-test)
Performance/stress tests now separated for independent CI execution

--- a/libre2-core/pom.xml
+++ b/libre2-core/pom.xml
@@ -98,6 +98,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <!-- Create test-jar for sharing test utilities with other modules -->
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <archive>
                         <manifest>
