Fix CI: Update workflow paths for restructured modules
Changes:
- Remove references to deleted libre2-dropwizard module
- Add perf-test module paths
- Workflow now triggers on changes to:
  - libre2-core/src/** (was already there)
  - perf-test/src/** (NEW)
  - pom.xml files for both modules

--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -15,10 +15,10 @@ on:
       - development
     paths:
       - 'libre2-core/src/**'
-      - 'libre2-dropwizard/src/**'
+      - 'perf-test/src/**'
       - 'pom.xml'
       - 'libre2-core/pom.xml'
-      - 'libre2-dropwizard/pom.xml'
+      - 'perf-test/pom.xml'
       - '.github/workflows/test-platforms.yml'
 
   # Manual trigger
@@ -30,10 +30,10 @@ on:
       - development
     paths:
       - 'libre2-core/src/**'
-      - 'libre2-dropwizard/src/**'
+      - 'perf-test/src/**'
       - 'pom.xml'
       - 'libre2-core/pom.xml'
-      - 'libre2-dropwizard/pom.xml'
+      - 'perf-test/pom.xml'
 
 jobs:
   # ============================================================================
