Test Consolidation and Module Restructuring (#21)
* Phase 1 Complete: Comprehensive test inventory and analysis

- Analyzed all 30 test classes (459 test methods)
- Classified tests: 4 unit, 20 integration, 2 performance, 4 stress
- Identified cross-module dependencies
- Documented Dropwizard usage in core module
- Proposed restructuring: perf-test module + integration-test separation
- No code changes, inventory only

* Step 1: Consolidate libre2-dropwizard into libre2-core

Changes:
- Move RE2MetricsConfig.java to libre2-core/dropwizard package
- Move 3 test files (JmxIntegrationTest, MetricsEndToEndTest, RE2MetricsConfigTest) to core
- Add metrics-jmx dependency to libre2-core (provided scope, optional)
- Remove libre2-dropwizard module from parent POM
- Delete libre2-dropwizard directory

Result: All 459 tests passing, BUILD SUCCESS
Multi-module structure retained for future module additions

* Step 2: Create perf-test module and separate performance/stress tests

Changes:
- Create new perf-test Maven module
- Move 2 performance tests to perf-test/performance package
  - BulkMatchingPerformanceTest
  - CachePerformanceTest
- Move 4 stress tests to perf-test/stress package
  - StressTest
  - ConcurrencyTest
  - ConcurrentCleanupTest
  - EvictionWhileInUseTest
- Configure libre2-core to build test-jar for sharing test utilities
- Add test-jar dependency in perf-test for TestUtils access
- Update package declarations and add necessary imports

Result: All 459 tests passing (431 in libre2-core, 28 in perf-test)
Performance/stress tests now separated for independent CI execution

* Fix CI: Update workflow paths for restructured modules

Changes:
- Remove references to deleted libre2-dropwizard module
- Add perf-test module paths
- Workflow now triggers on changes to:
  - libre2-core/src/** (was already there)
  - perf-test/src/** (NEW)
  - pom.xml files for both modules

* Fix CI: Remove libre2-dropwizard JAR check from build verification

The workflow was still chec

--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -15,10 +15,10 @@ on:
       - development
     paths:
       - 'libre2-core/src/**'
-      - 'libre2-dropwizard/src/**'
+      - 'perf-test/src/**'
       - 'pom.xml'
       - 'libre2-core/pom.xml'
-      - 'libre2-dropwizard/pom.xml'
+      - 'perf-test/pom.xml'
       - '.github/workflows/test-platforms.yml'
 
   # Manual trigger
@@ -30,10 +30,10 @@ on:
       - development
     paths:
       - 'libre2-core/src/**'
-      - 'libre2-dropwizard/src/**'
+      - 'perf-test/src/**'
       - 'pom.xml'
       - 'libre2-core/pom.xml'
-      - 'libre2-dropwizard/pom.xml'
+      - 'perf-test/pom.xml'
 
 jobs:
   # ============================================================================
@@ -60,26 +60,24 @@ jobs:
 
       - name: Verify JAR contents
         run: |
-          echo "Core JAR size:"
+          echo "Core JARs:"
           ls -lh libre2-core/target/libre2-core-*.jar
 
           echo ""
-          echo "Cassandra JAR size:"
-          ls -lh libre2-dropwizard/target/libre2-dropwizard-*.jar || echo "(empty skeleton - OK)"
-
-          echo ""
-          echo "Native libraries in core JAR:"
-          unzip -l libre2-core/target/libre2-core-*.jar | grep -E "libre2\.(dylib|so)"
+          echo "Native libraries in main JAR:"
+          unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep -E "libre2\.(dylib|so)"
 
           echo ""
           echo "Verify JNA NOT included (should show nothing):"
-          unzip -l libre2-core/target/libre2-core-*.jar | grep "com/sun/jna" || echo "✅ JNA not included (provided scope working)"
+          unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep "com/sun/jna" || echo "✅ JNA not included (provided scope working)"
 
       - name: Upload core JAR artifact
         uses: actions/upload-artifact@v4
         with:
           name: libre2-core-jar
-          path: libre2-core/target/libre2-core-*.jar
+          path: |
+            libre2-core/target/libre2-core-1.0.0.jar
+            libre2-core/target/libre2-core-1.0.0-tests.jar
           retention-days: 7
 
   # ============================================================================
@@ -114,7 +112,7 @@ jobs:
       - name: Verify native library in JAR
         run: |
           echo "Checking darwin-x86_64 library in JAR:"
-          unzip -l libre2-core/target/libre2-core-*.jar | grep "darwin-x86_64/libre2.dylib"
+          unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep "darwin-x86_64/libre2.dylib"
 
       - name: Run tests (multi-module)
         run: mvn test -B
@@ -149,7 +147,7 @@ jobs:
       - name: Verify native library in JAR
         run: |
           echo "Checking darwin-aarch64 library in JAR:"
-          unzip -l libre2-core/target/libre2-core-*.jar | grep "darwin-aarch64/libre2.dylib"
+          unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep "darwin-aarch64/libre2.dylib"
 
       - name: Run tests with JAR
         run: mvn test -B
@@ -208,7 +206,7 @@ jobs:
 
               # Verify native library in JAR
               echo 'Checking linux-x86_64 library in JAR:'
-              unzip -l libre2-core/target/libre2-core-*.jar | grep 'linux-x86_64/libre2.so'
+              unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run tests
               ./mvnw test -B
@@ -241,7 +239,7 @@ jobs:
       - name: Verify native library in JAR
         run: |
           echo "Checking linux-x86_64 library in JAR:"
-          unzip -l libre2-core/target/libre2-core-*.jar | grep "linux-x86_64/libre2.so"
+          unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep "linux-x86_64/libre2.so"
 
       - name: Run tests with JAR
         run: mvn test -B
@@ -290,7 +288,7 @@ jobs:
 
               # Verify native library in JAR
               echo 'Checking linux-x86_64 library in JAR:'
-              unzip -l libre2-core/target/libre2-core-*.jar | grep 'linux-x86_64/libre2.so'
+              unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run tests
               ./mvnw test -B
@@ -345,7 +343,7 @@ jobs:
 
               # Verify native library in JAR
               echo 'Checking linux-x86_64 library in JAR:'
-              unzip -l libre2-core/target/libre2-core-*.jar | grep 'linux-x86_64/libre2.so'
+              unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run tests
               ./mvnw test -B
@@ -397,7 +395,7 @@ jobs:
 
               # Verify native library in JAR
               echo 'Checking linux-x86_64 library in JAR:'
-              unzip -l libre2-core/target/libre2-core-*.jar | grep 'linux-x86_64/libre2.so'
+              unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run tests
               ./mvnw test -B
@@ -448,7 +446,7 @@ jobs:
 
               # Verify native library in JAR
               echo 'Checking linux-aarch64 library in JAR:'
-              unzip -l libre2-core/target/libre2-core-*.jar | grep 'linux-aarch64/libre2.so'
+              unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-aarch64/libre2.so'
 
               # Run tests
               ./mvnw test -B
@@ -503,7 +501,7 @@ jobs:
 
               # Verify native library in JAR
               echo 'Checking linux-aarch64 library in JAR:'
-              unzip -l libre2-core/target/libre2-core-*.jar | grep 'linux-aarch64/libre2.so'
+              unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-aarch64/libre2.so'
 
               # Run tests
               ./mvnw test -B
@@ -561,7 +559,7 @@ jobs:
 
               # Verify native library in JAR
               echo 'Checking linux-aarch64 library in JAR:'
-              unzip -l libre2-core/target/libre2-core-*.jar | grep 'linux-aarch64/libre2.so'
+              unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-aarch64/libre2.so'
 
               # Run tests
               ./mvnw test -B
