--- a/libre2-core/pom.xml
+++ b/libre2-core/pom.xml
@@ -39,6 +39,14 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Dropwizard Metrics JMX (optional) - for automatic JMX registration -->
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-jmx</artifactId>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -90,6 +98,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <!-- Create test-jar for sharing test utilities with other modules -->
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <archive>
                         <manifest>
